[project]
name = "chatlangraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-groq",
    "langchain-tavily>=0.2.13",
    "langgraph",
    "langsmith",
    "python-dotenv",
    "typing-extensions",
]
